tests/NormalTests/paczka1/fuzzy1/61740404.err
Error in line 11: L0g S3 38,17
Error in line 12: DG6WnCNik S3 38,3
Error in line 25: cNTYWpFC9f S3 41,1
Error in line 6: gcIb3A S972 16,7
Error in line 29: gcIb3A S946 18,6
Error in line 30: gcIb3A S3 62,9
Error in line 5: ZF4tFt S946 276,4
Error in line 10: L0g S3 73,1
